# myChess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: chessBoard.cpp  chessBoard.hpp  chessFont.hpp  defines.hpp  eventDispatcher.hpp  game.hpp  highLighter.cpp  highLighter.hpp  main.cpp  moveLogger.cpp  moveLogger.hpp  piece.hpp  pieceEditor.cpp  pieceEditor.hpp  scoreBar.cpp  scoreBar.hpp  sndManager.hpp  stockHandle.hpp  textFader.cpp  textFader.hpp  utils.cpp  utils.hpp
test-fen/: compile.sh  testFEN.cpp
testDraw/: compile.sh  draw.cpp
tests/: compile.sh  saveLoad.cpp  testSaveLoad.cpp
